tests/fixtures/invalid/int_notin_bool.py
# Cannot use 'not in' with Int and Bool
x: bool = 1 not in True
